--- a/springselection1/src/main/resources/application.properties
+++ b/springselection1/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=springselection1
+spring.application.name=${SPRING_APP_NAME:springselection1}
+logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+
+
+#Define your own custom username and password
+spring.security.user.name=${SECURITY_USERNAME:admin}
+spring.security.user.password=${SECURITY_PASSWORD:password}
