added trace level

--- a/springselection1/src/main/resources/application.properties
+++ b/springselection1/src/main/resources/application.properties
@@ -5,3 +5,5 @@ logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-
 #Define your own custom username and password
 spring.security.user.name=${SECURITY_USERNAME:admin}
 spring.security.user.password=${SECURITY_PASSWORD:password}
+
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
